--- a/Home_Official.css
+++ b/Home_Official.css
@@ -35,6 +35,7 @@ body{
     font-family: Montserrat;
     width: 100%;
 }
+
 .headline_box{
     width: 100%;
     position: fixed;
@@ -73,12 +74,14 @@ body{
 }
 .fa-bars{
     font-size: 30px;
+
 }
 .hamburger{
     margin-right: 20px;
     display: none;
 }
 .hamburger:hover{
+   
     cursor: pointer;
 }
 .men_women_more{
@@ -91,8 +94,12 @@ body{
         display: none;
     }    
     .hamburger{
+        
         display: block;
         margin-right: 15%;
+    }
+    .hamburger:hover{
+        color: rgb(14, 78, 189);
     }
 }
 .men{
@@ -211,6 +218,7 @@ body{
     color: white;
     font-weight: bold;
     margin-right: 20px;
+    transition: .1s;
 }
 .sign:hover{
     background-color: red;
@@ -264,6 +272,9 @@ body{
    .four_image_collection{
     margin-top: 10%;
    }
+   .product_types{
+    display: block;
+   }
 }
 .large_slides{
     font-size: 40px;
@@ -281,10 +292,26 @@ body{
     height: 40vh;
     align-items: first baseline;
 }
+@media  (max-width:479px) {
+    .products_show{
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+}
 .product_one, .product_two,.product_three,.product_four{
     width: 25%;
 }
-
+@media (max-width:479px) {
+    .product_one, .product_two,.product_three,.product_four{
+        width: 50%;
+        transition: .2s;
+        transition-delay: 20ms; 
+        cursor: pointer;
+    }
+    .product_two:hover,.product_three:hover,.product_four:hover, .product_one:hover{
+        transform: scale(1.6);
+    }
+}
 .one_image,.two_image,.three_image,.four_image{
     width: 100%;
 }
@@ -299,15 +326,37 @@ body{
     margin-top: 15vh;
     display: flex;
     justify-content: space-around;
-    
 }
 .collection_display{
     display: flex;
     width: 100%;
     margin-left: 20px;
     padding: 90px;
-    
 }
+@media (max-width:479px) {
+    .section_three{
+       display: block;
+       width: 100%;
+    }
+    .collection_display{
+        flex-direction: row;
+        max-width: 100%;
+        align-items: center;
+        overflow-x: hidden;
+        animation: jum 8s steps(4) infinite;
+        margin-left: -90px;
+    }
+    @keyframes jum{
+        to{
+            transform: translateX(-50px);
+        }
+        from{
+            transform: translateX(100px);
+            
+        }
+    }
+}   
+
 .collections_text{
     padding-top: 4vh;
     width: 50%;
@@ -357,20 +406,29 @@ padding-top: 70px;
     padding-left: 10px;
 }
 .section_six{
-    justify-self: center;
     margin-top: 12vh;
     text-align: center;
 }
 .get_instant{
+    text-align: center;
     padding-top: 20px;
     margin-bottom: 2vh;
 }
+@media (max-width:479px) {
+    .get_instant {
+        margin-left: 40%;
+    }
+    .lister{
+        margin-left: 40%;
+    }
+}
 .input{
-    height: 30px;
+    height: auto;
     width: 80vh;
     padding: 5px;
     border: 0;
     outline: 0;
+    
     
 }
 .send{
@@ -388,6 +446,7 @@ padding-top: 70px;
     border: 1px solid black;
     border-radius: 30px;
     width: 100vh;
+   margin-left: 25%;
     
 }
 @media (max-width:479px) {
